--- a/MyHotel/resources/sass/app.scss
+++ b/MyHotel/resources/sass/app.scss
@@ -1,1 +1,23 @@
-//
+* {
+    margin: 0;
+    padding: 0;
+
+    box-sizing: border-box;
+}
+
+body {
+    background-color: darkgoldenrod;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .row {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
