--- a/MyHotel/resources/sass/app.scss
+++ b/MyHotel/resources/sass/app.scss
@@ -19,5 +19,11 @@ body {
         content: "";
         display: table;
         clear: both;
+
+        margin: 5px;
+
+        a {
+            margin: 5px;
+        }
     }
 }
